--- a/src/styles/Calendar.css
+++ b/src/styles/Calendar.css
@@ -42,7 +42,7 @@
 }
 
 .fc .fc-button {
-  background-color: #4CAF50;
+  background-color: #4fb852;
   border: none;
   border-radius: 5px;
   color: white;
